--- a/FilesCss/index.css
+++ b/FilesCss/index.css
@@ -10,36 +10,22 @@
 }
 
 .menu {
-    display: flex;
-    justify-content: space-around;
     width: 12%;
     height: 250px;
-    position: absolute;
     margin: 0px 0 0 4px;
-    background-color: black;
     border-radius: 25px;
     position: fixed;
+    display: flex; 
 }
 
 nav{
-    justify-content: space-between;
+    
     font-size: 22px;
     padding: 12px 0 12px 0;
-}
-.container
-{
-    margin-left:180px;
-    margin-top: 15px;
     display: flex;
-    justify-content: space-between; 
-    height: 1200px;
+    justify-content: space-between;
 }
-.littlecards{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding-top: 50px;
-}
+
 .card1{
     display: inline-block;
     padding-top: 0px;
@@ -48,40 +34,47 @@ nav{
     margin-top: 50px;
     border-radius: 5px;   
 }
+
 footer, p{
     text-align: center;
     padding-top: 30px;  
 }
+
 span{
     color: orange;
     font-weight: bold;
 }
+
 body{
-    background-image: url('../ImageSW/starwars-header-image.jpeg');
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-attachment: fixed;
-    opacity: 1;
+    background: url('../ImageSW/starwars-header-image.jpeg') no-repeat fixed;
+    background-size: 100% 100%;
+    
 }
+
 #img1{
     height:400px;
     min-width: 100%; 
 }
+
 #img2{
     height:400px;
     min-width: 100%;
 }
+
 #img3{
     height:400px;
     min-width: 100%;
 }
+
 audio{
     width: 20%;
     height: 20px;
 }
+
 #mugs{
     height:225px ;
 }
+
 h1{
     color: red;
     text-align: center;
@@ -89,12 +82,14 @@ h1{
     font-size: 80px;
     font-style: italic;
 }
+
 h2{
     color: orange;
     text-align: center;
     font-family: 'distant_galaxyregular', Arial, Helvetica, sans-serif;
 
 }
+
 h3{
     color: orange;
     text-align: center;
@@ -114,57 +109,44 @@ a{
 p{
     color: white;
 } 
-.firstandthirdmovie{
-    
-    
+
+.firstandthirdmovie{ 
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     padding-top: 70px;
-    
-
 }
+
 .secondmovie img{
     width: 15%;
     padding-top: 50px;
 }
+
 .superclass {
     width:80%;
-    
     display: flex;
     text-align: end;
     flex-direction: row;
     margin-left: 15%;
+}
 
-}
-.carouselevents{
-    width:80%;
-    margin-left: 15%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 1000px;
-    padding-top: 70px;
-    
-
-}
-.carouselindiv{
-    width: 70%;
-    display: flex;
-    flex-direction: row;
-    margin-left: 15%;
-}
 .card-text a {
     color: orange;
     text-align: center;
     font-family: 'distant_galaxyregular', Arial, Helvetica, sans-serif;
     font-size: 20px;
 }
-.movies{
+
+.movies1{
     padding: 5px;
-    }
-    .movies2{
-        padding-left: 5px;
-        padding-right: 5px;
-        padding-top: 25px;
-        }
+}
+
+.movies2{
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 25px;
+}
+
+.movies3{
+    padding: 5px;
+}
