--- a/FilesCss/index.css
+++ b/FilesCss/index.css
@@ -1,152 +1,152 @@
 @font-face {
-    font-family: 'distant_galaxyregular';
-    src: url('../policeSW/web_fonts/distantgalaxy_regular_macroman/DISTGRG_-webfont.eot');
-    src: url('../policeSW/web_fonts/distantgalaxy_regular_macroman/DISTGRG_-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../policeSW/web_fonts/distantgalaxy_regular_macroman/DISTGRG_-webfont.woff2') format('woff2'),
-         url('../policeSW/web_fonts/distantgalaxy_regular_macroman/DISTGRG_-webfont.woff') format('woff'),
-         url('../policeSW/web_fonts/distantgalaxy_regular_macroman/DISTGRG_-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "distant_galaxyregular";
+  src: url("../policeSW/web_fonts/distantgalaxy_regular_macroman/DISTGRG_-webfont.eot");
+  src: url("../policeSW/web_fonts/distantgalaxy_regular_macroman/DISTGRG_-webfont.eot?#iefix")
+      format("embedded-opentype"),
+    url("../policeSW/web_fonts/distantgalaxy_regular_macroman/DISTGRG_-webfont.woff2")
+      format("woff2"),
+    url("../policeSW/web_fonts/distantgalaxy_regular_macroman/DISTGRG_-webfont.woff")
+      format("woff"),
+    url("../policeSW/web_fonts/distantgalaxy_regular_macroman/DISTGRG_-webfont.ttf")
+      format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
 .menu {
-    width: 12%;
-    height: 250px;
-    margin: 0px 0 0 4px;
-    border-radius: 25px;
-    position: fixed;
-    display: flex; 
+  width: 12%;
+  height: 250px;
+  margin: 0px 0 0 4px;
+  border-radius: 25px;
+  position: fixed;
+  display: flex;
 }
 
-nav{
-    
-    font-size: 22px;
-    padding: 12px 0 12px 0;
-    display: flex;
-    justify-content: space-between;
+nav {
+  font-size: 22px;
+  padding: 12px 0 12px 0;
+  display: flex;
+  justify-content: space-between;
 }
 
-.card1{
-    display: inline-block;
-    padding-top: 0px;
-    background-color: white;
-    height: 750px;
-    margin-top: 50px;
-    border-radius: 5px;   
+.card1 {
+  display: inline-block;
+  padding-top: 0px;
+  background-color: white;
+  height: 750px;
+  margin-top: 50px;
+  border-radius: 5px;
 }
 
-footer, p{
-    text-align: center;
-    padding-top: 30px;  
+footer,
+p {
+  text-align: center;
+  padding-top: 30px;
 }
 
-span{
-    color: orange;
-    font-weight: bold;
+span {
+  color: orange;
+  font-weight: bold;
 }
 
-body{
-    background: url('../ImageSW/starwars-header-image.jpeg') no-repeat fixed;
-    background-size: 100% 100%;
-    
+body {
+  background: url("../ImageSW/starwars-header-image.jpeg") no-repeat fixed;
+  background-size: 100% 100%;
 }
 
-#img1{
-    height:400px;
-    min-width: 100%; 
+#img1 {
+  height: 400px;
+  min-width: 100%;
 }
 
-#img2{
-    height:400px;
-    min-width: 100%;
+#img2 {
+  height: 400px;
+  min-width: 100%;
 }
 
-#img3{
-    height:400px;
-    min-width: 100%;
+#img3 {
+  height: 400px;
+  min-width: 100%;
 }
 
-audio{
-    width: 20%;
-    height: 20px;
+audio {
+  width: 20%;
+  height: 20px;
 }
 
-#mugs{
-    height:225px ;
+#mugs {
+  height: 225px;
 }
 
-h1{
-    color: red;
-    text-align: center;
-    font-family: 'distant_galaxyregular', Arial, Helvetica, sans-serif;
-    font-size: 80px;
-    font-style: italic;
+h1 {
+  color: red;
+  text-align: center;
+  font-family: "distant_galaxyregular", Arial, Helvetica, sans-serif;
+  font-size: 80px;
+  font-style: italic;
 }
 
-h2{
-    color: orange;
-    text-align: center;
-    font-family: 'distant_galaxyregular', Arial, Helvetica, sans-serif;
-
+h2 {
+  color: orange;
+  text-align: center;
+  font-family: "distant_galaxyregular", Arial, Helvetica, sans-serif;
 }
 
-h3{
-    color: orange;
-    text-align: center;
-    font-family: 'distant_galaxyregular', Arial, Helvetica, sans-serif;
-    font-size: 40px;
-
+h3 {
+  color: orange;
+  text-align: center;
+  font-family: "distant_galaxyregular", Arial, Helvetica, sans-serif;
+  font-size: 40px;
 }
-a{
-    color: orange;
-    
+a {
+  color: orange;
 }
 
-.fontpcard p{
-    color : black;
-    padding: 15px;
-    }
-p{
-    color: white;
-} 
-
-.firstandthirdmovie{ 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding-top: 70px;
+.fontpcard p {
+  color: black;
+  padding: 15px;
+}
+p {
+  color: white;
 }
 
-.secondmovie img{
-    width: 15%;
-    padding-top: 50px;
+.firstandthirdmovie {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-top: 70px;
+}
+
+.secondmovie img {
+  width: 15%;
+  padding-top: 50px;
 }
 
 .superclass {
-    width:80%;
-    display: flex;
-    text-align: end;
-    flex-direction: row;
-    margin-left: 15%;
+  width: 80%;
+  display: flex;
+  text-align: end;
+  flex-direction: row;
+  margin-left: 15%;
 }
 
 .card-text a {
-    color: orange;
-    text-align: center;
-    font-family: 'distant_galaxyregular', Arial, Helvetica, sans-serif;
-    font-size: 20px;
+  color: orange;
+  text-align: center;
+  font-family: "distant_galaxyregular", Arial, Helvetica, sans-serif;
+  font-size: 20px;
 }
 
-.movies1{
-    padding: 5px;
+.movies1 {
+  padding: 5px;
 }
 
-.movies2{
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-top: 25px;
+.movies2 {
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 25px;
 }
 
-.movies3{
-    padding: 5px;
+.movies3 {
+  padding: 5px;
 }
